--- a/contas/templates/contas/dashboard.html
+++ b/contas/templates/contas/dashboard.html
@@ -14,10 +14,16 @@
 			<a class="btn btn-primary  btn-sm btn-block" href="">Criar cliente</a>
 			<table class="table table-sm">
 				<tr>
-					<th></th>
 					<th>Cliente</th>
-					<th>Pedidos</th>
+					<th>Telefone</th>
 				</tr>
+
+				{% for customer in customers %}
+					<tr>
+						<td>{{customer.name}}</td>
+						<td>{{customer.phone}}</td>
+					</tr>
+				{% endfor %}
 
 			</table>
 		</div>
@@ -36,6 +42,18 @@
 					<th>Atualizar</th>
 					<th>Remover</th>
 				</tr>
+
+				{% for order in orders%}
+					<tr>
+						<td>{{order.product}}</td>
+						<td>{{order.date_created}}</td>
+						<td>{{order.status}}</td>
+						<td><a href="">Atualizar</a></td>
+						<td><a href="">Remover</a></td>
+						
+
+					</tr>
+				{% endfor %}
 		
 			</table>
 		</div>
