--- a/contas/templates/contas/products.html
+++ b/contas/templates/contas/products.html
@@ -16,6 +16,13 @@
 							<th>Categoria</th>
 							<th>Preço</th>
 						</tr>
+						{% for i in products %}
+							<tr>
+								<td>{{i.name}}</td>
+								<td>{{i.category}}</td>
+								<td>{{i.price}}</td>
+							</tr>
+						{% endfor %}
 						
 					</table>
 				</div>
