--- a/contas/templates/contas/customer.html
+++ b/contas/templates/contas/customer.html
@@ -19,8 +19,8 @@
 		<div class="card card-body">
 			<h5>Contato</h5>
 			<hr>
-			<p>Email: </p>
-			<p>Telefone: </p>
+			<p>Email: {{customer.email}}</p>
+			<p>Telefone: {{customer.phone}}</p>
 		</div>
 	</div>
 
@@ -28,7 +28,7 @@
 		<div class="card card-body">
 			<h5>Total de pedidos</h5>
 			<hr>
-			<h1 style="text-align: center;padding: 10px"></h1>
+			<h1 style="text-align: center;padding: 10px">{{order_count}}</h1>
 		</div>
 	</div>
 </div>
@@ -60,6 +60,19 @@
 					<th>Atualizar</th>
 					<th>Apagar</th>
 				</tr>
+
+				{% for order in orders %}
+
+				<tr>
+					<td>{{order.product}}</td>
+					<td>{{order.product.category}}</td>
+					<td>{{order.date_created}}</td>
+					<td>{{order.status}}</td>
+					<td><a class="btn btn-sm btn-info" href="">Atualizar</a></td>
+					<td><a class="btn btn-sm btn-danger" href="">Remover</a></td>
+				</tr>
+				
+				{% endfor %}
 
 			</table>
 		</div>
