--- a/contas/templates/contas/navbar.html
+++ b/contas/templates/contas/navbar.html
@@ -8,10 +8,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Painel de controle</a>
+        <a class="nav-link" href="{% url 'home' %}">Painel de controle</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Produtos</a>
+        <a class="nav-link" href="{% url 'products' %}">Produtos</a>
       </li>
     </ul>
   </div>
