--- a/contas/templates/contas/dashboard.html
+++ b/contas/templates/contas/dashboard.html
@@ -33,7 +33,7 @@
 	</div>
 
 	<div class="col-md-7">
-		<h5>Últimos 5 pedidos</h5>
+		<h5>Pedidos:</h5>
 		<hr>
 		<div class="card card-body">
 			<table class="table table-sm">
